// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container components should math snapshot with children 1`] = `
<div
  class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  data-testid="container-id"
>
  <p>
    Children
  </p>
</div>
`;

exports[`Container components should math snapshot without children 1`] = `
<div
  class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  data-testid="container-id"
/>
`;
